Added the intro for analysis and wrote some content

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ summary {
 
 
 <h1 class="title toc-ignore">ETC5521 Assignment 1</h1>
-<h3 class="subtitle">College Tuition, Diversity, and Pay</h3>
+<h3 class="subtitle">Education System in the US</h3>
 <h4 class="author">Junhao Wang</h4>
 <h4 class="author">Priya Ravindra Dingorkar</h4>
 <h4 class="date">2020-08-27</h4>
@@ -396,7 +396,7 @@ summary {
 <div id="primary-question" class="section level2">
 <h2><span class="header-section-number">3.1</span> Primary Question</h2>
 <p>How valuable is the investment in education among America universities?</p>
-<p>Since tuition fee is relatively high for most students, or their families,value for money is of great concern. This question is to decover how highly valued are the tuition fees among universities in America.</p>
+<p>Since tuition fee is relatively high for most students, or their families, value for money is of great concern. This question is to decover how highly valued are the tuition fees among universities in America, by analyzing the various aspects of the education system in US.</p>
 </div>
 <div id="secondary-questions" class="section level2">
 <h2><span class="header-section-number">3.2</span> Secondary Questions</h2>
@@ -934,13 +934,12 @@ On Campus
 </div>
 <div id="data-structure-and-cleaning-process" class="section level2">
 <h2><span class="header-section-number">4.6</span> Data Structure and Cleaning Process</h2>
-<p>All the information that has been gather in these different data files have been done through web scraping using the rvest library, html_nodes, html_url and creating dataset in tibble and mutating new columns and later binding rows together.</p>
-<p>All the data has been scraped and written in csv and later, using the readr function the csv have been read in to R environment.</p>
+<p>All the information gathered in these different data files was achieved by web scraping using the rvest library, html nodes, html url, and generating data set in tibble, mutating new columns and linking rows together later on. All the data was scraped and written in csv and later, the csv was read in to R environment using the readr function.</p>
 </div>
 </div>
 <div id="analysis-and-findings" class="section level1">
 <h1><span class="header-section-number">5</span> Analysis and findings</h1>
-<p>[FILL] Should include at least one plot or numerical summary for each of your questions, that helps the reader arrive at an answer. You should also write paragraphs describing the methods, summaries and findings.</p>
+<p>One of the key reasons students chose to study in the USA is the prestige of the country for renowned higher education programs. Completing a degree from one of the best higher education programs in the world would make you stand out from peers of similar backgrounds and job experiences. Let us examine and know the important facts about the US education system. We look at the various aspects when studying, the diversity of education, the history of education, the cost of tuition, income among people people in the United States, the different wages currently on the market, and similar exciting analyses.</p>
 </div>
 <div id="references" class="section level1">
 <h1><span class="header-section-number">6</span> References</h1>
